--- a/style.css
+++ b/style.css
@@ -1,35 +1,64 @@
 body {
     background-color: #3fc1c9;
 }
-
 header {
     font-family: 'Lobster', cursive;
     text-align: center;
     color: #364f6b;
 }
-
 header h1 {
     font-size: 45px;
 }
-
 main {
+    font-family: 'Mulish', sans-serif;
+    color: #364f6b;
     margin: 0 auto;
     min-width: 980px;
     text-align: center;
     position: absolute;
+    padding-top: 120px;
     top: 0;
     left: 0;
     right: 0;
 }
-
 .icons input {
-    width: 200px;
+    width: 9%;
     transition: transform 0.2s;
-    padding-top: 130px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-top: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    outline: nove;
 }
-
 .icons input:hover {
     transform: scale(1.2);
+}
+
+.icons input:active{
+    box-shadow: 5px 5px 5px 5px #666;
+}
+.icons input:focus {
+    outline: 0; 
+}
+
+.data-div {
+    display: grid;
+    grid-template-columns: 1fr 15% 10% 15% 1fr;
+    grid-auto-rows: 100px;
+    padding-top: 30px;
+}
+.data-div .startmessage {
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 1;
+}
+.data-div .playerChoice {
+    grid-column-start: 2;
+    grid-row-start: 1; 
+}
+.data-div .computerChoice {
+    grid-column-start: 4;
+    grid-row-start: 1; 
+}
+.score {
+    padding-top: 30px;
 }
