--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ header {
     color: #364f6b;
 }
 header h1 {
-    font-size: 45px;
+    font-size: 40px;
 }
 main {
     font-family: 'Mulish', sans-serif;
@@ -16,7 +16,7 @@ main {
     min-width: 980px;
     text-align: center;
     position: absolute;
-    padding-top: 120px;
+    padding-top: 150px;
     top: 0;
     left: 0;
     right: 0;
@@ -32,7 +32,6 @@ main {
 .icons input:hover {
     transform: scale(1.2);
 }
-
 .icons input:active{
     box-shadow: 5px 5px 5px 5px #666;
 }
@@ -53,11 +52,26 @@ main {
 }
 .data-div .playerChoice {
     grid-column-start: 2;
-    grid-row-start: 1; 
+    grid-row-start: 1;
+    visibility: hidden;
 }
 .data-div .computerChoice {
     grid-column-start: 4;
-    grid-row-start: 1; 
+    grid-row-start: 1;
+    visibility: hidden;
+}
+.data-div .roundWonMessage {
+    grid-column-start: 3;
+    grid-row-start: 2;
+}
+
+.data-div img {
+    width: 40%;
+    transition: transform 0.2s;
+    padding-top: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    outline: nove;
 }
 .score {
     padding-top: 30px;
