--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ header {
     color: #364f6b;
 }
 header h1 {
-    font-size: 40px;
+    font-size: 35px;
 }
 main {
     font-family: 'Mulish', sans-serif;
@@ -21,50 +21,79 @@ main {
     left: 0;
     right: 0;
 }
-.icons input {
-    width: 9%;
+.icons .button {
+    width: 8%;
     transition: transform 0.2s;
     padding-top: 5px;
     padding-left: 15px;
     padding-right: 15px;
     outline: nove;
 }
-.icons input:hover {
+.icons .button:hover {
     transform: scale(1.2);
 }
-.icons input:active{
-    box-shadow: 5px 5px 5px 5px #666;
-}
-.icons input:focus {
+.icons .button:active{
+    transform: translate3d(0, 0, 0);
+} 
+.icons .button:focus {
     outline: 0; 
 }
-
+.icons .button-disabled {
+    width: 8%;
+    transition: transform 0.2s;
+    padding-top: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    outline: nove;
+}
+.icons .button-disabled:focus {
+    outline: 0; 
+}
 .data-div {
     display: grid;
     grid-template-columns: 1fr 15% 10% 15% 1fr;
     grid-auto-rows: 100px;
-    padding-top: 30px;
+    padding-top: 20px;
 }
-.data-div .startmessage {
+.data-div .start-message {
     grid-column-start: 2;
     grid-column-end: 5;
     grid-row-start: 1;
 }
-.data-div .playerChoice {
+.data-div .we-have-a-winner {
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    visibility: hidden;
+}
+.data-div .we-have-a-winner button {
+    background-color: #364f6b;
+    transition: transform 0.2s;
+    border: none;
+    color: #f5f5f5;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+.data-div .we-have-a-winner button:hover {
+    transform: scale(1.2);
+}
+.data-div .player-choice {
     grid-column-start: 2;
     grid-row-start: 1;
     visibility: hidden;
 }
-.data-div .computerChoice {
+.data-div .computer-choice {
     grid-column-start: 4;
     grid-row-start: 1;
     visibility: hidden;
 }
-.data-div .roundWonMessage {
+.data-div .round-won-message {
     grid-column-start: 3;
     grid-row-start: 2;
 }
-
 .data-div img {
     width: 40%;
     transition: transform 0.2s;
@@ -73,6 +102,18 @@ main {
     padding-right: 15px;
     outline: nove;
 }
-.score {
-    padding-top: 30px;
+.data-div .playerscore {
+    grid-column-start: 2;
+    grid-row-start: 3;
+    padding-top: 20%;
+    visibility: hidden;
+}
+.data-div .computerscore {
+    grid-column-start: 4;
+    grid-row-start: 3;
+    padding-top: 20%;
+    visibility: hidden;
+}
+.data-div h1{
+    font-size: 60px;
 }
